--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 **/[Bb]uilds/
 **/[Ll]ogs/
 **/[Uu]ser[Ss]ettings/
+**/AssetStore
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
