--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.inputsystem": "1.3.0",
     "com.unity.render-pipelines.universal": "7.7.1",
