--- a/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -16,12 +16,12 @@
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "Scattering.ParentObjectsWithSurface",
-                "value": "{\"m_Value\":true}"
+                "value": "{\"m_Value\":false}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "Scattering.AvoidOverlappingObjects",
-                "value": "{\"m_Value\":true}"
+                "value": "{\"m_Value\":false}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -81,7 +81,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"f6991b94bcc17094ab461fc71035d10a\",\"type\":2},\"prefab\":{\"fileID\":1216688828669844,\"guid\":\"eb6d994e8071f624d94280bfffa33a83\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"f6991b94bcc17094ab461fc71035d10a\",\"type\":2},\"prefab\":{\"fileID\":1216688828669844,\"guid\":\"9c6be2cd406ef044283b846d58575f8e\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"f6991b94bcc17094ab461fc71035d10a\",\"type\":2},\"prefab\":{\"fileID\":2795318547083921244,\"guid\":\"ba56e574db9fc1c49a87c2b5e40e0f4f\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"f6991b94bcc17094ab461fc71035d10a\",\"type\":2},\"prefab\":{\"fileID\":1243781198178196,\"guid\":\"8d1a89fec6d78794397967dda07bfc83\",\"type\":3}}]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
