--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Shear-Terror_Demo_720.m4v filter=lfs diff=lfs merge=lfs -text
 BUILD_WIN/Shear-Terror/Shear-Terror_Data/sharedassets0.assets.resS filter=lfs diff=lfs merge=lfs -text
+BUILD_WIN.zip filter=lfs diff=lfs merge=lfs -text
